[gd_scene load_steps=2 format=2]

[ext_resource path="res://SelectPlayers.gd" type="Script" id=1]

[node name="SelectPlayers" type="Control"]
anchor_left = 0.116
anchor_top = 0.062
anchor_right = 0.116
anchor_bottom = 0.062
margin_left = -118.784
margin_top = -37.2
margin_right = 119.216
margin_bottom = 36.8
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 236.0
margin_bottom = 14.0
text = "Combien de joueurs vont participer ?"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 236.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="1" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 116.0
margin_bottom = 20.0
text = "1"

[node name="2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 116.0
margin_bottom = 44.0
text = "2"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 236.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="3" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 116.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="4" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 116.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/4" to="." method="_on_4_pressed"]
